force-app/main/default/objects/Account/fields/Second_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Second_Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second_Pipeline</label>
    <type>Checkbox</type>
</CustomField>