force-app/main/default/objects/Account/fields/shwdemo__vwfs_demo1__c.field-meta.xml
<CustomField>
    <fullName>shwdemo__vwfs_demo1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>vwfs_demo1</label>
    <type>Checkbox</type>
</CustomField>