force-app/main/default/objects/Account/fields/Test_FTP__c.field-meta.xml
<CustomField>
    <fullName>Test_FTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test_FTP</label>
    <type>Checkbox</type>
</CustomField>